<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">quantity</string>
    <string name="quantity_value">0</string>
    <string name="button">Order</string>
    <string name="orderSummary">Order Summary</string>
    <string name="price_value">0лв.</string>
    <string name="addCoffee">+</string>
    <string name="subtract_coffee">-</string>
    <string name="toppings">toppings</string>
    <string name="topping01">Whipped cream</string>
    <string name="topping02">Chocolate</string>
    <string name="name">Name</string>

</resources>
